# StuHadoop

./: README.md
TransCode/native/: Allegion_Hadoop_MergeVideoSplitTool.h  Allegion_Hadoop_SplitVideoFileTool.h  Allegion_Hadoop_TransVideoSplitTool.h  MergeVideoSplitTool.cpp  MergeVideoSplitTool.h  SplitVideoFileTool.cpp  SplitVideoFileTool.h  TransVideoSplitTool.cpp  TransVideoSplitTool.h  UtilTool.cpp  UtilTool.h  config.h.in  configure  configure.ac  main.cpp  makefile.am  makefile.in
TransCode/src/Allegion/Hadoop/: MergeVideoSplitTool.java  SplitVideoFileTool.java  TransVideoSplitTool.java
TransCode/src/Allegion/Hadoop/SplitVideoFile/: SplitVideoComparator.java  SplitVideoFileInputFormat.java  SplitVideoFileMapReduce.java  SplitVideoFileMerge.java  SplitVideoFileOutputFormat.java  SplitVideoFileRecordReader.java  SplitVideoFileRecordWriter.java  SplitVideoFileTrans.java  SplitVideoPartitioner.java
